--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "portfolio-creator",
   "version": "0.1.0",
+  "homepage": "https://github.com/Rakooa37/cv-creator.git",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
