--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-creator",
   "version": "0.1.0",
-  "homepage": "https://rakooa37.github.io/cv-creator/git",
+  "homepage": "https://rakooa37.github.io/cv-creator",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
